[package]
name        = "fuse-rs"
version     = "0.0.0"
authors     = ["Carlos Galdino <carloshsgaldino@gmail.com>"]
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/carlosgaldino/fuse-rs"
categories  = ["api-bindings", "filesystem"]
keywords    = ["fuse", "filesystem", "bindings", "ffi"]
description = "WIP"

[dependencies]
libc      = "0.2.70"
once_cell = "1.4.0"
nix       = "0.17.0"
bitflags  = "1.0"
cfg-if    = "0.1"

[dependencies.libfuse-sys]
version          = "0.3.0"
default-features = false
features         = ["fuse_35", "fuse_highlevel"]