[package]
name        = "fuse-rs"
version     = "0.0.0"
authors     = ["Carlos Galdino <carloshsgaldino@gmail.com>"]
edition     = "2018"
license     = "Apache-2.0"
repository  = "https://github.com/carlosgaldino/fuse-rs"
categories  = ["api-bindings", "filesystem"]
keywords    = ["fuse", "filesystem", "bindings", "ffi"]
description = "WIP"

[dependencies]
libfuse-sys = { version = "0.3.0", default-features = false, features = ["fuse_35", "fuse_highlevel"] }
libc        = "0.2.70"
once_cell   = "1.4.0"
nix         = "0.17.0"
bitflags    = "1.0"
cfg-if      = "0.1"

[features]
default = ["open", "getattr", "readdir", "read"]

getattr    = []
readlink   = []
mkdir      = []
unlink     = []
rmdir      = []
symlink    = []
rename     = []
link       = []
chmod      = []
chown      = []
truncate   = []
open       = []
read       = []
write      = []
statfs     = []
flush      = []
release    = []
fsync      = []
opendir    = []
readdir    = []
fsyncdir   = []
releasedir = []
init       = []
destroy    = []
access     = []
create     = []
ftruncate  = []
fgetattr   = []
lock       = []

full = [
  "getattr",
  "readlink",
  "mkdir",
  "unlink",
  "rmdir",
  "symlink",
  "rename",
  "link",
  "chmod",
  "chown",
  "truncate",
  "open",
  "read",
  "write",
  "statfs",
  "flush",
  "release",
  "fsync",
  "opendir",
  "readdir",
  "fsyncdir",
  "releasedir",
  "init",
  "destroy",
  "access",
  "create",
  "ftruncate",
  "fgetattr",
  "lock",
]

[[example]]
name = "hellofs"
required-features = ["open", "getattr", "readdir", "read"]